--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -1,3 +1,15 @@
+.page-dark {}
+.page-light {}
+
+.page-index {}
+.page-about {}
+.page-products {}
+.page-systems {}
+.page-sertification {}
+.page-contacts {}
+
+
+// ================================================
 summary::-webkit-details-marker {
   // убрать стандартный маркер
   display: none;
