--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -24,7 +24,7 @@
     }
     @media (max-width: em(750)){
         grid-template-columns: 100%;
-        row-gap: rem(70);
+        row-gap: rem(50);
     }
   }
   // .main__head
@@ -48,12 +48,15 @@
         row-gap: rem(25);
     }
     @media (max-width: em(750)){
-        flex-direction: row;
+        // flex-direction: row;
+        display: grid;
+        grid-template-columns: auto auto;
     }
     @media (max-width: em(550)){
         max-width: rem(450);
         padding-left: rem(50);      
-        flex-direction: column;  
+        // flex-direction: column;  
+        grid-template-columns: auto;
     }
     @media (max-width:$mobileSmall){
        padding-left: rem(45);
@@ -75,11 +78,12 @@
     @media (max-width: em(1100)){
         top: 85%;
         left: 20%;
+        display: none;
     }
-    @media (max-width: em(550)){
-        left: 0%;
-        top: 90%;
-    }
+    // @media (max-width: em(550)){
+        // left: 0%;
+        // top: 90%;
+    // }
 	}
 	// .main__btn
 	&__btn {
@@ -94,8 +98,10 @@
     color: $blue-56-FF;
 
     border-radius: 50%;
-    @include adaptiveValue("width", 182, 170);
-    @include adaptiveValue("height", 182, 170);
+    // @include adaptiveValue("width", 182, 170);
+    // @include adaptiveValue("height", 182, 170);
+    width: rem(182);
+    height: rem(182);
 
     font-weight: 700;
     font-size: rem(12);
@@ -122,6 +128,28 @@
       height: auto;
       filter: invert(49%) sepia(90%) saturate(2054%) hue-rotate(201deg) brightness(101%) contrast(101%);
       transition: all 0.1s linear;
+    }
+    @media (max-width: em(750)){
+      grid-row-start: 2;
+      grid-column-start: 2;
+
+      width: 100%;
+      // max-width: rem(280);
+      height: rem(60);
+      border-radius: rem(16);
+      br {
+        display: none;
+      }
+      span {
+        flex-direction: row;
+        align-items: center;
+        gap: rem(15);
+      }
+    }
+    @media (max-width: em(550)){
+        grid-column-start: 1;
+        grid-row-start: 3;
+
     }
 	}
   // .main__txt
@@ -241,11 +269,26 @@
       @include adaptiveValue("width", 89, 76);
     }
 	}
-  // .main-slider__pagination
-  &__pagination {
+	// .main-slider__pagination-wrapper
+	&__pagination-wrapper {
     position: absolute;
     top: 0;
     right: 0;
+    @media (max-width: em(550)){
+        overflow-x: auto;
+        white-space: nowrap;
+        scroll-behavior: smooth;
+        right: unset;
+        // left: rem(50);
+        left: 0;
+        width: 100%;
+        padding-bottom: rem(10);
+        padding-right: rem(50);
+        transition: all .8s ease;
+    }
+	}
+  // .main-slider__pagination
+  &__pagination {
     display: flex;
     flex-direction: column;
     @media (max-width: em(750)){
@@ -255,18 +298,22 @@
         height: rem(50);
     }
     @media (max-width: em(550)){
-        width: max-content;
-        right: unset;
-        left: rem(50);
+     position: relative;
+     left: rem(50);
+     transition: all .8s ease;
     }
 
     .swiper-pagination-bullet {
+      white-space: nowrap;
       font-weight: 500;
       font-size: rem(16);
       line-height: calc(30/16);
       color: $gray-90;
       cursor: pointer;
       transition: all .3s linear;
+      @media (max-width: em(550)){
+          margin-right: rem(3);
+      }
       &.swiper-pagination-bullet-active {
         color: $white-ff;
         @media (max-width: em(750)){
@@ -698,6 +745,7 @@
     align-self: flex-end;
     @media (max-width: em(550)){
         align-self: flex-start;
+        width: 100%;
     }
 
     &::before {
